# wavier-keys

./: README.md
circuit/main/: fp-info-cache  main.kicad_pcb  main.kicad_prl  main.kicad_pro  main.kicad_sch
circuit/main/logo/: logo.kicad_mod
circuit/top/: fp-info-cache  top.kicad_pcb  top.kicad_prl  top.kicad_pro  top.kicad_sch
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: keycodes.rs  layout.rs  main.rs
