[package]
name = "wavier-keys"
version = "0.1.0"
edition = "2021"
authors = ["Oya-Tomo <oyatomo.dev@gmail.com>"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", feature = ["print-defmt"] }

rp-pico = "0.7.0"

usb-device = "0.2.9"
usbd-hid = "0.6.1"

embedded-hal = "0.2.7"
fugit = "0.3.7"

heapless = "0.7.16"

[profile.release]
debug = 2